# opencv

./: CMakeLists.txt  README.md
backup/: quickdemo.cpp  quickopencv.h  readme.md  test440.cpp
opencv01/: CMakeLists.txt
opencv01/src/: main-000.cpp  main-001.cpp  main-002.cpp  main-003.cpp  main-004.cpp  main-008.cpp  main-010.cpp  main-011.cpp  main-012.cpp  main-013.cpp  main-014.cpp  main-015.cpp  main-016.cpp  main-017.cpp  main-018.cpp  main-019.cpp  main-020.cpp  main-021.cpp  main-022.cpp  main-023.cpp  main-024.cpp  main-025.cpp  main-026.cpp  main-027z.cpp  main-028.cpp  main-029.cpp  main-030.cpp  main-031.cpp  main-032.cpp  main-033.cpp  main-035.cpp
opencv02/: CMakeLists.txt
opencv02/src/: cascade_demo.cpp  main-001.cpp  main01-corner_harris.cpp  main02-shitomasi_corner.cpp  main03-mycustom_corner.cpp  main04-subpixel_corner.cpp  main05-surf_demo.cpp  main06-sift_demo.cpp  main07-hog_demo.cpp  main08-lbp_demo.cpp  main09-integral_demo.cpp  main10-descriptor_demo.cpp  main11-flann_demo.cpp  main12-findobjectplanar_demo.cpp  main13-kaze_detect_demo.cpp  main14-kaze_match_demo.cpp  main15-brisk_demo.cpp  main16-cascade_demo.cpp
opencv03/: CMakeLists.txt
opencv03/src/: case1-1.cpp  case1-2.cpp  case1.cpp  case2-1.cpp  case2-2.cpp  case3.cpp  case4.cpp  case5.cpp  case6.cpp  main-000.cpp
opencv04/: CMakeLists.txt
opencv04/src/: cascader_01.cpp  cascader_02.cpp  cascader_03.cpp  cascader_04.cpp  cascader_05.cpp  cascader_06.cpp  cascader_07.cpp  cascader_08.cpp
opencv05/: CMakeLists.txt
opencv05/src/: matting_001.cpp  matting_002.cpp  matting_003.cpp  matting_004.cpp  matting_005.cpp  matting_006.cpp  matting_007.cpp  matting_008.cpp  matting_009.cpp
opencv06/: CMakeLists.txt  README.md
opencv06-2/: CMakeLists.txt
opencv06-2/src/: video_008.cpp  video_009.cpp
opencv06/src/: video_001.cpp  video_002.cpp  video_003.cpp  video_004.cpp  video_005.cpp  video_006.cpp  video_007.cpp  video_008.cpp  video_009.cpp
opencv07/: CMakeLists.txt  README.md
opencv07/src/: dnn01_classification.cpp  dnn02_ssd-2.cpp  dnn02_ssd.cpp  dnn02back_ssd.cpp  dnn03_fcn.cpp
opencv08/: CMakeLists.txt
opencv08-2/: CMakeLists.txt  README.md
opencv08-2/src/: facerecog_04.cpp  facerecog_05.cpp  facerecog_06.cpp  facerecog_07.cpp  facerecog_08.cpp
opencv08/src/: facerecog_01.cpp  facerecog_02.cpp  facerecog_03.cpp  facerecog_04.cpp  facerecog_06.cpp  facerecog_07.cpp
opencv_find_package/: CMakeLists.txt
opencv_find_package/src/: main.cpp
opencvtest/: CMakeLists.txt
opencvtest/src/: main-001.cpp  main-002.cpp  main-003.cpp  main-004.cpp
